--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
               var tbody = document.getElementById('tbody');
               moveH = "Move";
-              scoreH = "AWScore";
+              scoreH = "Score";
               winrateH = "Winrate";
 
               for (var i = 0; i < json.length; i++) {
