Revert "Update index.html"
This reverts commit 6aaee68dd0a11112a0ddfde184a0ba4a9980852c.

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         };
 
         var probe_book = function() {
-          var baseUrl = 'https://www.chessdb.cn/cdb.php?action=queryall&json=1&board='
-          var pvUrl = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board='
+          var baseUrl = 'http://www.chessdb.cn/cdb.php?action=queryall&json=1&board='
+          var pvUrl = 'http://www.chessdb.cn/cdb.php?action=querypv&json=1&board='
 
           // Get the fen from current board position
           var userfen = game.fen();
