--- a/index.html
+++ b/index.html
@@ -19,7 +19,27 @@
   </head>
 
   <body>
-    <!-- start example HTML --->
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <a class="navbar-brand" href="#">ChessDB Online Chess Opening Book</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/noobpwnftw/chessdb" target="_blank">ChessDB</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://talkchess.com/forum3/index.php" target="_blank">CCC</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/fsmosca/ChessDB-Online-Book" target="_blank">Github</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <br>
+
     <div class="container-fluid">
       <div class="row">
         <!-- Col 1 -->
