Restore square highlight of last last move after undoing the last move.

--- a/index.html
+++ b/index.html
@@ -315,7 +315,17 @@
         $('#undoBtn').on('click', function() {
           game.undo();
           board.position(game.fen());
+
+          // Remove square highlight of last move.
           removeHighlights();
+
+          // Restore square highlight of last last move.
+          moveHistory = game.history({ verbose: true });
+          if (moveHistory.length >= 1) {
+            lastMove = moveHistory[moveHistory.length - 1];
+            addHighlights(lastMove.from, lastMove.to);
+          }
+
           updateStatus();
         });
 
