--- a/index.html
+++ b/index.html
@@ -53,27 +53,35 @@
 
         <!-- Col 2 -->
         <div class="col-lg-4">
-          <h5>ChessDB Opening Book</h5>
+          <center>
+            <h5>ChessDB Opening Book</h5>
+            <div id="board" style="width: 400px"></div>
 
-          <div id="board" style="width: 400px"></div>
-          <input type="button" id="startBtn" value="Start" />
-          <input type="button" id="undoBtn" value="Undo" />
-          <input type="button" id="flipBtn" value="Flip" />
-          <input type="button" id="inputEpdBtn" value="Setup" />
-          <input type="text" placeholder="input your fen or epd" id='fenbox' style="width: 121px" />
-          <input type="button" id="clearPosBoxBtn" value="Clear" />
+            <input type="button" id="startBtn" value="Start" />
+            <input type="button" id="undoBtn" value="Undo" />
+            <input type="button" id="flipBtn" value="Flip" />
+            <input type="button" id="inputEpdBtn" value="Setup" />
+            <input type="text" placeholder="input your fen or epd" id='fenbox' style="width: 50px" />
+            <input type="button" id="clearPosBoxBtn" value="Clear" />
+            <input type="button" id="savePGNBtn" value="Save" />
 
-          <div id="status" style="font-weight:bold;"></div>
-          <div id="fen" style="font-size:10px;"></div>
+            <div id="fen" style="font-size:10px;"></div>
+          </center>
         </div>
 
         <!-- Col 3 -->
         <div class="col-lg-3">
           <h5>PV of top move</h5>
-          <div style="height:50px; overflow-y:scroll;" id="top-move-pv"></div>
+          <div style="height:70px; overflow-y:scroll;" id="top-move-pv"></div><br>
+
+          <h5>Top 4 Leaf node scores</h5>
+          <div><span id="advance-pv1">pv1:</span></div>
+          <div><span id="advance-pv2">pv2:</span></div>
+          <div><span id="advance-pv3">pv3:</span></div>
+          <div><span id="advance-pv4">pv4:</span></div><br>
 
           <h5>Book probe results</h5>
-          <div style="height:316px; overflow-y:scroll;">
+          <div style="height:118px; overflow-y:scroll;">
             <table width=100% border="1" cellpadding="0">
               <tbody id="tbody"></tbody>
             </table>
@@ -175,28 +183,39 @@
           var url = baseUrl + userfen;
           var pvUrlGet = pvUrl + userfen;
 
+          // We will not make request if game is over.
+          if (game.game_over()) {
+            var msg = "Game over!";
+            console.log(msg);
+            document.getElementById('top-move-pv').innerHTML = msg;
+            for (var i = 0; i < 4; i++) {
+              document.getElementById("advance-pv" + (i+1)).innerHTML = "Pv" + (i+1) + ": " + msg;
+            }
+            $("#tbody tr").remove();
+            return;
+          }
+
           // (1) Request query all
           $.get(url, function(data, status) {
             if (typeof(data.moves) === 'undefined') {
-              console.log('Query all, there is no book move!');
               $("#tbody tr").remove();
             }
             else {
-              json = data.moves;
+              var json = data.moves;
 
-              // Crate table for book probing results
+              // Create table for book probing results
               // Clear table first
               $("#tbody tr").remove();
 
               var tbody = document.getElementById('tbody');
-              moveH = "Move";
-              scoreH = "Score";
-              winrateH = "Winrate";
+              const moveH = "Move";
+              const scoreH = "Score";
+              const winrateH = "Winrate";
 
               for (var i = 0; i < json.length; i++) {
-                sanMove = json[i].san;
-                score = json[i].score;
-                winrate = json[i].winrate;
+                var sanMove = json[i].san;
+                var score = json[i].score;
+                var winrate = json[i].winrate;
 
                 // 2019-08-03: ChessDB does not return winrate (by design)
                 // when score is a mate. So we will just calculate winrate
@@ -220,17 +239,229 @@
             }
           });
 
-          // (2) Request query pv
-          $.get(pvUrlGet, function(data, status) {
-            if (status == 'success' && data.status == 'ok'){
-              var line = "score: " + data.score + ", depth: " + data.depth + "<br>" + data.pvSAN;
-              var pv = line.replace(/,/g, ' ');
-              document.getElementById('top-move-pv').innerHTML = pv;
+          // Query leaf score of top 1 move.
+          // Get the top move, push it, and query its PV. Walk the PV except the
+          // last move and query its PV again to get its leaf node score.
+          $.get(url, function(data, status) {
+            var numPv = 1;
+            var idStr = "advance-pv" + numPv;
+            var label = "Pv" + numPv + ": ";
+            document.getElementById(idStr).innerHTML = label;
+            if (typeof(data.moves) === 'undefined') {
+              console.log('Query all, there is no book move!');
             }
-            else
-              document.getElementById('top-move-pv').innerHTML = "No more pv info!";
+            else {
+              var json = data.moves;
+              for (var j = numPv-1; j < Math.min(numPv, json.length); j++) {
+                var topSanMove = json[j].san;
+                var topGame = new Chess(game.fen());
+                topGame.move(topSanMove);
+                var topFen = topGame.fen();
+
+                // Query the top pv, walk the pv and get its leaf score.
+                var topUrl = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board=' + topFen;
+                $.get(topUrl, function(topData, topStatus) {
+                  if (topStatus == 'success' && topData.status == 'ok'){
+                    var game1 = new Chess(topGame.fen());
+                    var depth = topData.depth - 1;
+                    if (depth >= 0) {
+                      for (var i = 0; i < depth; i++) {
+                          game1.move(topData.pvSAN[i]);
+                      }
+                      var leafFen = game1.fen();
+                      var url1 = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board=' + leafFen;
+                      $.get(url1, function(data1, status1) {
+                        if (status1 == 'success' && data1.status == 'ok'){
+                          score = data1.score;
+                          if (game.turn() !== game1.turn()) {
+                            score = -1*score;
+                          }
+                          var leafNodeInfo = "Score of " + "<b>"+json[numPv-1].san+"</b>" + " after " + (1+depth) + " plies: " + "<b>"+score+"</b>";
+                          document.getElementById(idStr).innerHTML = leafNodeInfo;
+                        }
+                      });
+                    }
+                  }
+                  else {
+                    document.getElementById(idStr).innerHTML = "Score of " + "<b>"+json[numPv-1].san+"</b>" + " after " + (1) + " plies: " + "<b>"+json[numPv-1].score+"</b>";
+                  }
+                });
+              }
+            }
           });
-        };
+
+          // Query leaf score of top 2 move.
+          $.get(url, function(data, status) {
+            var numPv = 2;
+            var idStr = "advance-pv" + numPv;
+            var label = "Pv" + numPv + ": ";
+            document.getElementById(idStr).innerHTML = label;
+            if (typeof(data.moves) === 'undefined') {
+              console.log('Query all, there is no book move!');
+            }
+            else {
+              var json = data.moves;
+              for (var j = numPv-1; j < Math.min(numPv, json.length); j++) {
+                var topSanMove = json[j].san;
+                var topGame = new Chess(game.fen());
+                topGame.move(topSanMove);
+                var topFen = topGame.fen();
+
+                // Query the top pv, walk the pv and get its leaf score.
+                var topUrl = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board=' + topFen;
+                $.get(topUrl, function(topData, topStatus) {
+                  if (topStatus == 'success' && topData.status == 'ok'){
+                    var game1 = new Chess(topGame.fen());
+                    var depth = topData.depth - 1;
+                    if (depth >= 0) {
+                      for (var i = 0; i < depth; i++) {
+                          game1.move(topData.pvSAN[i]);
+                      }
+                      var leafFen = game1.fen();
+                      var url1 = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board=' + leafFen;
+                      $.get(url1, function(data1, status1) {
+                        if (status1 == 'success' && data1.status == 'ok'){
+                          score = data1.score;
+                          if (game.turn() !== game1.turn()) {
+                            score = -1*score;
+                          }
+                          var leafNodeInfo = "Score of " + "<b>"+json[numPv-1].san+"</b>" + " after " + (1+depth) + " plies: " + "<b>"+score+"</b>";
+                          document.getElementById(idStr).innerHTML = leafNodeInfo;
+                        }
+                      });
+                    }
+                  }
+                  else {
+                    document.getElementById(idStr).innerHTML = "Score of " + "<b>"+json[numPv-1].san+"</b>" + " after " + (1) + " plies: " + "<b>"+json[numPv-1].score+"</b>";
+                  }
+                });
+              }
+            }
+          });
+
+          // Query leaf score of top 3 move.
+          $.get(url, function(data, status) {
+            var numPv = 3;
+            var idStr = "advance-pv" + numPv;
+            var label = "Pv" + numPv + ": ";
+            document.getElementById(idStr).innerHTML = label;
+            if (typeof(data.moves) === 'undefined') {
+              console.log('Query all, there is no book move!');
+            }
+            else {
+              var json = data.moves;
+              for (var j = 2; j < Math.min(3, json.length); j++) {
+                var topSanMove = json[j].san;
+                var topGame = new Chess(game.fen());
+                topGame.move(topSanMove);
+                var topFen = topGame.fen();
+
+                // Query the top pv, walk the pv and get its leaf score.
+                var topUrl = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board=' + topFen;
+                $.get(topUrl, function(topData, topStatus) {
+                  if (topStatus == 'success' && topData.status == 'ok'){
+                    var game1 = new Chess(topGame.fen());
+                    var depth = topData.depth - 1;
+                    if (depth >= 0) {
+                      for (var i = 0; i < depth; i++) {
+                          game1.move(topData.pvSAN[i]);
+                      }
+                      var leafFen = game1.fen();
+                      var url1 = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board=' + leafFen;
+                      $.get(url1, function(data1, status1) {
+                        if (status1 == 'success' && data1.status == 'ok'){
+                          score = data1.score;
+                          if (game.turn() !== game1.turn()) {
+                            score = -1*score;
+                          }
+                          var leafNodeInfo = "Score of " + "<b>"+json[numPv-1].san+"</b>" + " after " + (1+depth) + " plies: " + "<b>"+score+"</b>";
+                          document.getElementById(idStr).innerHTML = leafNodeInfo;
+                        }
+                      });
+                    }
+                  }
+                  else {
+                    document.getElementById(idStr).innerHTML = "Score of " + "<b>"+json[numPv-1].san+"</b>" + " after " + (1) + " plies: " + "<b>"+json[numPv-1].score+"</b>";
+                  }
+                });
+              }
+            }
+          });
+
+          // Query leaf score of top 4 move.
+          $.get(url, function(data, status) {
+            var numPv = 4;
+            var idStr = "advance-pv" + numPv;
+            var label = "Pv" + numPv + ": ";
+            document.getElementById(idStr).innerHTML = label;
+            if (typeof(data.moves) === 'undefined') {
+              console.log('Query all, there is no book move!');
+            }
+            else {
+              var json = data.moves;
+              for (var j = 3; j < Math.min(4, json.length); j++) {
+                var topSanMove = json[j].san;
+                var topGame = new Chess(game.fen());
+                topGame.move(topSanMove);
+                var topFen = topGame.fen();
+
+                // Query the top pv, walk the pv and get its leaf score.
+                var topUrl = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board=' + topFen;
+                $.get(topUrl, function(topData, topStatus) {
+                  if (topStatus == 'success' && topData.status == 'ok'){
+                    var game1 = new Chess(topGame.fen());
+                    var depth = topData.depth - 1;
+                    if (depth >= 0) {
+                      for (var i = 0; i < depth; i++) {
+                          game1.move(topData.pvSAN[i]);
+                      }
+                      var leafFen = game1.fen();
+                      var url1 = 'https://www.chessdb.cn/cdb.php?action=querypv&json=1&board=' + leafFen;
+                      $.get(url1, function(data1, status1) {
+                        if (status1 == 'success' && data1.status == 'ok'){
+                          score = data1.score;
+                          if (game.turn() !== game1.turn()) {
+                            score = -1*score;
+                          }
+                          var leafNodeInfo = "Score of " + "<b>"+json[numPv-1].san+"</b>" + " after " + (1+depth) + " plies: " + "<b>"+score+"</b>";
+                          document.getElementById(idStr).innerHTML = leafNodeInfo;
+                        }
+                      });
+                    }
+                  }
+                  else {
+                    document.getElementById(idStr).innerHTML = "Score of " + "<b>"+json[numPv-1].san+"</b>" + " after " + (1) + " plies: " + "<b>"+json[numPv-1].score+"</b>";
+                  }
+                });
+              }
+            }
+          });
+
+          // (2) Request PV of top 1 move and show it in PV box.
+          $.get(pvUrlGet, function(data, status) {
+            if (status !== 'success'){
+              msg = "Request failed! PV query of top 1 move is not successful.";
+              console.log(msg);
+              document.getElementById('top-move-pv').innerHTML = msg;
+            }
+            else if (data.status !== 'ok') {
+              if (!game.game_over()){
+                msg = "Request is successful but PV info is not available.";
+                console.log(msg);
+                document.getElementById('top-move-pv').innerHTML = msg;
+              }
+              else {
+                document.getElementById('top-move-pv').innerHTML = "Game over!";
+              }
+            }
+            else {
+              var sanPv = "" + data.pvSAN;
+              var pv = sanPv.replace(/,/g, ' ');
+              var line = "score: " + data.score + ", depth: " + data.depth + "<br>" + pv;
+              document.getElementById('top-move-pv').innerHTML = line;
+            }
+          });
+        }
 
         // Alert user if game is over. Probe online book. Show the fen after
         // each move. Update game result, fen and pgn boxes.
@@ -249,6 +480,10 @@
           // draw?
           else if (game.in_draw() === true)
             game.header('Result', '1/2-1/2');
+
+          else {
+            game.header('Result', '*');
+          }
 
           // Probe the ChessDB online opening book.
           probe_book();
@@ -351,7 +586,29 @@
           game.header('Black', '?');
         };
 
+        // Download game in pgn format.
+        function download(filename, text) {
+          var element = document.createElement('a');
+          element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+          element.setAttribute('download', filename);
+
+          element.style.display = 'none';
+          document.body.appendChild(element);
+
+          element.click();
+
+          document.body.removeChild(element);
+        }
+
+        // Start file download.
+        document.getElementById("savePGNBtn").addEventListener("click", function(){
+          var text = game.pgn({ max_width: 79, newline_char: '\n' }) + "\n\n";
+          var filename = "mygame.pgn";
+          download(filename, text);
+        }, false);
+
       }; // end init()
+
       $(document).ready(init);
     </script>
   </body>
